--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
  <div class="card">
-  <p><strong>Learning</strong></p>
+  <img src="/assets/images/illustration-article.svg" alt="image" id="image">
+  <p class="text" id="learning"><strong>Learning</strong></p>
 
-  <h4>Published 21 Dec 2023</h4>
+  <h4 class="text" id="published">Published 21 Dec 2023</h4>
 
-  <h1>HTML & CSS foundations</h1>
+  <h1 class="text">HTML & CSS foundations</h1>
 
-  <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+  <p class="text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
-  <h4>Greg Hooper</h4>
+  <h4 class="text">Greg Hooper</h4>
  </div>
 
 </body>
