--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
   <h4 class="text" id="published">Published 21 Dec 2023</h4>
 
-  <h1 class="text">HTML & CSS foundations</h1>
+  <h1 class="text" id="heading">HTML & CSS foundations</h1>
 
-  <p class="text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+  <p class="text" id="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
-  <h4 class="text">Greg Hooper</h4>
+  <h4 class="text" id="name">Greg Hooper</h4>
  </div>
 
 </body>
