--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
  <div class="card">
   <img src="/assets/images/illustration-article.svg" alt="image" id="image">
   <p class="text" id="learning"><strong>Learning</strong></p>
-
   <h4 class="text" id="published">Published 21 Dec 2023</h4>
-
   <h1 class="text" id="heading">HTML & CSS foundations</h1>
-
   <p class="text" id="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
-
-  <h4 class="text" id="name">Greg Hooper</h4>
+  <div class="avatar-name">
+    <img src="assets/images/image-avatar.webp" id="avatar">
+    <h4 class="text" id="name">Greg Hooper</h4>
+  </div>
  </div>
-
 </body>
 </html>
